# stratum

./: .gitignore  CLAUDE.md  CMakeLists.txt  dist.sh  loc.sh
src/: CMakeLists.txt
src/alloc/: alloc.c  space_log.c  space_map.c
src/block/: block.c  file_backend.c
src/btree/: btree.c  btree_internal.h  cache.c  msg.c  node.c
src/cmd/: check.c  cli_common.c  cli_common.h  fuse.c  scrub.c  stratum.c
src/compress/: compress.c
src/cow/: cow.c
src/crypto/: crypto.c
src/fs/: fs.c  fs_internal.h
src/p9/: p9.c
src/snap/: snap.c
tests/: CMakeLists.txt  test_alloc.c  test_block.c  test_btree.c  test_compress.c  test_crypto.c  test_fs.c  test_key.c  test_main.h  test_node.c  test_p9.c  test_snap.c  test_space.c  test_space_log.c  test_types.c
v2/: .gitignore  CMakeLists.txt  README.md  run.sh
v2/bench/: CMakeLists.txt  README.md  bench_btree_lf.c  bench_dedup.c  bench_migrate_policy.c  bench_reflink_complexity.c  bench_snapshot.c  run_dedup.sh
v2/ci/: github-actions.yml
v2/docs/: P4-3b-priming.md  P4-4b-priming.md  REFERENCE.md  SLATE-DESIGN.md  SPEC-TO-CODE.md  TUI-DESIGN.md  p9.5-parallel-1-design.md  p9.5-parallel-2-design.md  p9.5-parallel-3-design.md  phase2-bw-tree-design.md  phase2-status.md  phase3-status.md  phase4-status.md  phase5-status.md  phase6-status.md  phase7-status.md  phase8-status.md  phase9-status.md  session-handoff-2026-05-11-swiss6-v1-1.md  session-handoff-2026-05-11-swiss6.md  session-handoff-2026-05-11.md  session-handoff-2026-05-12.md  swiss-5-design.md  swiss-6-design.md
v2/docs/reference/: 00-overview.md  01-crypto.md  02-block.md  03-btree.md  04-ebr.md  05-bootstrap-alloc.md  06-keyschema.md  07-sb-sync.md  08-pool-redundancy.md  09-scrub.md  10-specs.md  11-glossary.md  12-dataset.md  13-snapshot.md  14-extent.md  15-cas.md  16-inode.md  17-dirent.md  18-xattr.md  19-locks.md  20-9p.md  21-stratumd.md  22-ctl.md  23-9p_client.md
v2/docs/validation/: README.md  p7val1-dedup-2026-04-30.csv  p7val1-dedup-2026-04-30.md  p7val2-reflink-2026-04-30.csv  p7val2-reflink-2026-04-30.md  p7val3-sendrecv-snap-2026-04-30.md  p7val4-migpol-2026-04-30.csv  p7val4-migpol-2026-04-30.md
v2/include/stratum/: 9p.h  9p_client.h  alloc.h  alloc_roots.h  block.h  block_inject.h  bootstrap.h  btnode.h  btree.h  btree_store.h  cas.h  cdc.h  cmds.h  crypto.h  ctl.h  dataset.h  dirent.h  dirent_testing.h  dirty_buffer.h  ebr.h  extent.h  fs.h  fs_testing.h  hash.h  host_fs.h  inode.h  janus.h  keyfile.h  keyschema.h  locks.h  lp9.h  p9.h  pool.h  repair_log.h  scrub.h  sdarray.h  send_recv.h  slate.h  snapshot.h  snapshot_testing.h  (+7 more)
v2/specs/: README.md  allocator.cfg  allocator.tla  balanced.cfg  balanced.tla  bptr.cfg  bptr.tla  bptr_accept_corrupt_buggy.cfg  bptr_no_verify_writeback_buggy.cfg  cas.cfg  cas.tla  cas_delete_forgets_deref_buggy.cfg  cas_gc_old_order_silent_skip_buggy.cfg  cas_gc_race_buggy.cfg  cas_migrate_forgets_refbump_buggy.cfg  cas_migrate_reuses_hot_paddr_buggy.cfg  cas_migrate_without_drop_buggy.cfg  cas_rehydrate_no_deref_buggy.cfg  clone.cfg  clone.tla  clone_delete_snap_with_clones_buggy.cfg  compound_ops.cfg  compound_ops.tla  compound_ops_negative_counter_buggy.cfg  compound_ops_per_inode.cfg  compound_ops_per_inode.tla  compound_ops_per_inode_out_of_order_buggy.cfg  compound_ops_per_inode_release_one_inode_mid_buggy.cfg  compound_ops_writer_releases_lock_mid_buggy.cfg  concurrency.cfg  concurrency.tla  ctl_conn.cfg  ctl_conn.tla  ctl_conn_destroy_uaf_buggy.cfg  ctl_conn_shared_caller_buggy.cfg  ctl_conn_shared_sessions_buggy.cfg  dataset.cfg  dataset.tla  dataset_cycles_buggy.cfg  dataset_destroy_non_leaf_buggy.cfg  (+111 more)
v2/src/9p/: CMakeLists.txt  server.c  wire.h
v2/src/9p_client/: 9p_client.c  CMakeLists.txt
v2/src/alloc/: CMakeLists.txt  alloc.c  bootstrap.c  sdarray.c  xor_filter.c
v2/src/alloc_roots/: CMakeLists.txt  alloc_roots.c
v2/src/block/: CMakeLists.txt  bdev.c  bdev_internal.h  iouring.c  posix.c
v2/src/bootstrap/: CMakeLists.txt  pool.c
v2/src/btnode/: CMakeLists.txt  btnode_common.h  common.c  internal.c  leaf.c
v2/src/btree/: CMakeLists.txt  btree.c  btree_lf.c  btree_mt.c  node.c  node.h
v2/src/btree_store/: CMakeLists.txt  crypt.c  serialize.c
v2/src/cas/: CMakeLists.txt  cas_index.c
v2/src/cdc/: CMakeLists.txt  cdc.c
v2/src/cmd/: CMakeLists.txt  cli_passphrase.c  cli_passphrase.h
v2/src/crypto/: CMakeLists.txt  aead.c  aead_aegis256.c  aead_internal.h  aead_xchacha20_siv.c  argon2.c  ct.c  hkdf.c  hybrid_wrap.c  init.c  mlkem768.c  random.c  x25519.c
v2/src/ctl/: CMakeLists.txt  synfs.c
v2/src/dataset/: CMakeLists.txt  dataset.c
v2/src/dirent/: CMakeLists.txt  dirent.c
v2/src/dirty_buffer/: CMakeLists.txt  dirty_buffer.c
v2/src/ebr/: CMakeLists.txt  ebr.c
v2/src/extent/: CMakeLists.txt  extent.c  extent_index.c
v2/src/fs/: CMakeLists.txt  fs.c
v2/src/hash/: CMakeLists.txt  blake3_wrap.c  xxhash_wrap.c
v2/src/host_fs/: CMakeLists.txt  host_fs.c
v2/src/inode/: CMakeLists.txt  inode.c
v2/src/janus/: CMakeLists.txt  backend.h  backend_file.c  backend_passphrase.c  client.c  daemon.c  daemon.h  janusd.c  synfs.c  synfs.h
v2/src/keyfile/: CMakeLists.txt  keyfile.c
v2/src/keyschema/: CMakeLists.txt  keyschema.c
v2/src/locks/: CMakeLists.txt  locks.c
v2/src/lp9/: CMakeLists.txt  server.c
v2/src/p9/: CMakeLists.txt  server.c  wire.h
v2/tests/: CMakeLists.txt  INDEX.md  test_9p.c  test_9p_client.c  test_9p_socket.c  test_alloc.c  test_alloc_roots.c  test_bdev.c  test_bdev_async.c  test_bootstrap.c  test_btnode.c  test_btree.c  test_btree_lf.c  test_btree_mt.c  test_btree_store.c  test_cas_index.c  test_cdc.c  test_compound_ops_concurrent.c  test_crash_inject.c  test_crypto.c  test_ctl.c  test_ctl_concurrent.c  test_ctl_conn_lifecycle.c  test_dataset.c  test_dirent.c  test_dirty_buffer.c  test_ebr.c  test_extent.c  test_extent_index.c  test_fs.c  test_fs_common.c  test_fs_common.h  test_fs_phase8.c  test_hash.c  test_hybrid.c  test_inode.c  test_janus.c  test_keyfile_passphrase.c  test_keyschema_rotate.c  test_locks.c  (+20 more)
v2/tui/: Cargo.toml  build.rs
(+111 files in other folders)
