function(stm_add_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE stratum-lib)
    target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/src)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

stm_add_test(test_types)
stm_add_test(test_key)
stm_add_test(test_block)
stm_add_test(test_node)
stm_add_test(test_btree)
stm_add_test(test_fs)
stm_add_test(test_compress)
stm_add_test(test_crypto)
stm_add_test(test_snap)
stm_add_test(test_p9)
stm_add_test(test_alloc)
